--- a/src/Components/Layout/styles.css
+++ b/src/Components/Layout/styles.css
@@ -6,6 +6,11 @@ body {
     background-color: red;
 }
 
+.messaging {
+    background-color: blue;
+}
+
+
 .layout {
     height: 100vh;
     width: 100vw;
