--- a/src/Components/Chat/styles.css
+++ b/src/Components/Chat/styles.css
@@ -1,16 +1,25 @@
 .chat-avatar {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-    border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .chat-title {
-    font-weight: 600;
-    font-size: 16px;
+  font-weight: 600;
+  font-size: 16px;
 }
 
 .chat-message {
-    font-size: 16px;
-    color:rgb(169, 169, 169);
+  font-size: 16px;
+  color: rgb(169, 169, 169);
+}
+
+.chat-row {
+  width: 350px;
+  margin-inline: 0.5rem 0.5rem;
+}
+
+.chat-row:hover {
+  background-color: rgb(53, 53, 53);
 }
